--- a/mobile.html
+++ b/mobile.html
@@ -64,11 +64,11 @@
     <footer>
         <nav id="menu">
             <ul>
-                <li>La Boutique</li>
-                <li>Contactez nous</li>
-                <li>À Propos</li>
-                <li>Mentions légales</li>
-                <li>F.A.Q</li>
+                <li><a href="#">La Boutique</a></li>
+                <li><a href="#">Contactez nous</a></li>
+                <li><a href="#">À Propos</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="#">F.A.Q</a></li>
             </ul>
         </nav>
         <P><a href="#">retour en haut</a></P>
