--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="description en 200 à 300 mots du contenu de la page Internet qui s'affiche">
 	<link rel="stylesheet" type="text/css" href="css/global.css">
 	<!--styles communs à toutes les pages-->
-	<link rel="stylesheet" type="text/css" href="css/menu.css">
+	<link rel="stylesheet" type="text/css" href="css/index.css">
 
 </head>
 <body>
