--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="css/global.css">
 	<!--styles communs à toutes les pages-->
 	<link rel="stylesheet" type="text/css" href="css/index.css">
+    <script src="https://kit.fontawesome.com/828ad8ef85.js" crossorigin="anonymous"></script>
+
 
 </head>
 <body>
@@ -46,31 +48,31 @@
             </div>
             <div class="vignette">
                 <img src="images/jeunesse.jpg" alt="jeunesse.jpg">
-                <h2>BD et Mangas</h2>
+                <h2>Jeunesse</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
             <div class="vignette">
                 <img src="images/thriller.jpg" alt="thriller.jpg" class="thriller">
-                <h2>BD et Mangas</h2>
+                <h2>Policier et Thriller</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
             <div class="vignette">
                 <img src="images/biographie.jpg" alt="biographie.jpg">
-                <h2>BD et Mangas</h2>
+                <h2>Biographies</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
             <div class="vignette">
                 <img src="images/fiction.jpg" alt="fiction.jpg">
-                <h2>BD et Mangas</h2>
+                <h2>Littérature et Fiction</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
             <div class="vignette">
                 <img src="images/SF.jpg" alt="SF.jpg">
-                <h2>BD et Mangas</h2>
+                <h2>SF et Fantasy</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
@@ -87,6 +89,11 @@
             </ul>
         </nav>
         <P><a href="#">retour en haut</a></P>
+        <div class="icone">
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter"></i>
+        </div>
     </footer>
     <script>
         document.querySelector(".burger").addEventListener("click",()=> document.querySelector(".burnav").classList.toggle('open'));
