--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
             <div class="vignette">
-                <img src="images/fiction.jpg" alt="fiction.jpg">
+                <img src="images/fiction.jpg" alt="fiction.jpg" class="fiction">
                 <h2>Littérature et Fiction</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
