--- a/index.html
+++ b/index.html
@@ -3,40 +3,35 @@
 <head>
 	<meta charset="utf-8">
 	<title>La Notule</title>
-	<meta name="description" content="description en 200 à 300 mots du contenu de la page Internet qui s'affiche">
+	<meta name="description" content="Boutique en ligne de la librairie indépendante 'La Notule'">
 	<link rel="stylesheet" type="text/css" href="css/global.css">
 	<!--styles communs à toutes les pages-->
 	<link rel="stylesheet" type="text/css" href="css/index.css">
     <script src="https://kit.fontawesome.com/828ad8ef85.js" crossorigin="anonymous"></script>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 </head>
 <body>
-    <header>
-        <nav class="burnav">
-            <form>
-                <input type="text" id="search" value="Rechercher...">
-            </form>
-            <ul>
-                <li><a href="#">Se connecter</a></li>
-                <li><a href="#">S'inscrire</a></li>
-                <li><a href="#">Panier (0)</a></li>
-                <li><a href="#">La Boutique</a></li>
-                <li><a href="#">Contactez nous</a></li>
-                <li><a href="#">À Propos</a></li>
-                <li><a href="#">Mentions légales</a></li>
-                <li><a href="#">F.A.Q</a></li>
-            </ul>
-        </nav>
-        <!-- <a href="#menu"> -->
-        <div class="burger">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
+    <header>       
+        <i class="fas fa-bars burger"></i>
         <img src="images/logo.svg" alt="logo.svg">
     </header>
-    <div class="barre"></div>
+    <nav class="burnav">
+        <form>
+            <input type="text" id="search" value="Rechercher...">
+        </form>
+        <ul>
+            <li><a href="#">Se connecter</a></li>
+            <li><a href="#">S'inscrire</a></li>
+            <li><a href="#">Panier (0)</a></li>
+            <li><a href="#">La Boutique</a></li>
+            <li><a href="#">Contactez nous</a></li>
+            <li><a href="#">À Propos</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="#">F.A.Q</a></li>
+        </ul>
+    </nav>
+    <!-- <div class="barre"></div> -->
     <img src="images/typewriter.jpg" alt="typemachine.png" class="banniere">
     <main>
         <div class="center">
