--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
             <li><a href="#">F.A.Q</a></li>
         </ul>
     </nav>
-    <!-- <div class="barre"></div> -->
+    <div class="barre">
+        <nav>
+            <ul>
+                <li><a href="#" class="accueil">Accueil</a></li>
+                <li><a href="#">La Boutique</a></li>
+                <li><a href="#">Contactez-nous</a></li>
+            </ul>
+        </nav>
+    </div>
     <img src="images/typewriter.jpg" alt="typemachine.png" class="banniere">
     <main>
         <div class="center">
