--- a/index.html
+++ b/index.html
@@ -12,9 +12,19 @@
 
 </head>
 <body>
-    <header>       
+    <header>
+        <div class="haut">
+            <div class="btn">
+            <p>S'inscrire</p>
+            <p>Se connecter</p>
+            </div>
+        </div>     
         <i class="fas fa-bars burger"></i>
         <img src="images/logo.svg" alt="logo.svg">
+        <h1>La Notule</h1>
+        <form>
+            <input type="text" id="search" value="Rechercher...">
+        </form>
     </header>
     <nav class="burnav">
         <form>
