--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
 <body>
     <header>
         <div class="haut">
-            <div class="btn">
+            <!-- <div class="btn">
             <p>S'inscrire</p>
             <p>Se connecter</p>
-            </div>
+            </div> -->
+            <ul>
+                <li><a href="#">S'inscrire</a></li>
+                <li><a href="#">Se connecter</a></li>
+            </ul>
         </div>     
         <i class="fas fa-bars burger"></i>
         <img src="images/logo.svg" alt="logo.svg">
