--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <img src="images/logo.svg" alt="logo.svg">
         <h1>La Notule</h1>
         <form>
-            <input type="text" id="search" value="Rechercher...">
+            <input type="text" id="search" value="Rechercher..." onfocus="this.value=''">
         </form>
     </header>
     <nav class="burnav">
         <form>
-            <input type="text" id="search" value="Rechercher...">
+            <input type="text" id="search" value="Rechercher..." onfocus="this.value=''">
         </form>
         <ul>
             <li><a href="#">Se connecter</a></li>
