--- a/pages/boutique.html
+++ b/pages/boutique.html
@@ -66,6 +66,7 @@
             </nav>
             <h2>BD et Mangas</h2>
             <section class="hScroll">
+                <div class="xScroll">
                 <div class="vignette">
                     <img src="../images/Onepiece1.jpg">
                     <h3>One Piece T.01</h3>
@@ -76,6 +77,29 @@
                         <div></div>
                         <p>disponible</p>
                     </div>
+                </div>
+                <div class="vignette">
+                    <img src="../images/Onepiece1.jpg">
+                    <h3>One Piece T.01</h3>
+                    <P>Eiichiro Oda</P>
+                    <p>Glénat</p>
+                    <p>6.90€</p>
+                    <div>
+                        <div></div>
+                        <p>disponible</p>
+                    </div>
+                </div>
+                <div class="vignette">
+                    <img src="../images/Onepiece1.jpg">
+                    <h3>One Piece T.01</h3>
+                    <P>Eiichiro Oda</P>
+                    <p>Glénat</p>
+                    <p>6.90€</p>
+                    <div>
+                        <div></div>
+                        <p>disponible</p>
+                    </div>
+                </div>
                 </div>
             </section>
 
