--- a/pages/boutique.html
+++ b/pages/boutique.html
@@ -56,7 +56,7 @@
             <h2>Catégories</h2>
             <nav>
                 <ul class="catégories">
-                    <li><a href="">BD et Mangas</a></li>
+                    <li><a href="">BD et Manga</a></li>
                     <li><a href="">Jeunesse</a></li>
                     <li><a href="">Policier et Thriller</a></li>
                     <li><a href="">Biographie</a></li>
@@ -64,47 +64,344 @@
                     <li><a href="">SF et Fantasy</a></li>
                 </ul>
             </nav>
-            <h2>BD et Mangas</h2>
+            <h2>BD et Manga</h2>
             <section class="hScroll">
                 <div class="xScroll">
                 <div class="vignette">
-                    <img src="../images/Onepiece1.jpg">
+                    <img src="../images/op1.jpg">
                     <h3>One Piece T.01</h3>
-                    <P>Eiichiro Oda</P>
-                    <p>Glénat</p>
+                    <P class="petite-police">Eiichiro Oda</P>
+                    <p class="petite-police">Glénat</p>
                     <p>6.90€</p>
-                    <div>
-                        <div></div>
+                    <div class="dispo">
+                        <div class="circle"></div>
                         <p>disponible</p>
                     </div>
+                    <a href="#">
+                    <div class="btn-ajouter">
+                        <p>Ajouter au panier</p>
+                    </div>
+                </a>
                 </div>
                 <div class="vignette">
-                    <img src="../images/Onepiece1.jpg">
+                    <img src="../images/op1.jpg">
                     <h3>One Piece T.01</h3>
-                    <P>Eiichiro Oda</P>
-                    <p>Glénat</p>
+                    <P class="petite-police">Eiichiro Oda</P>
+                    <p class="petite-police">Glénat</p>
                     <p>6.90€</p>
-                    <div>
-                        <div></div>
+                    <div class="dispo">
+                        <div class="circle"></div>
                         <p>disponible</p>
                     </div>
+                    <a href="#">
+                    <div class="btn-ajouter">
+                        <p>Ajouter au panier</p>
+                    </div>
+                    </a>
                 </div>
                 <div class="vignette">
-                    <img src="../images/Onepiece1.jpg">
+                    <img src="../images/op1.jpg">
                     <h3>One Piece T.01</h3>
-                    <P>Eiichiro Oda</P>
-                    <p>Glénat</p>
+                    <P class="petite-police">Eiichiro Oda</P>
+                    <p class="petite-police">Glénat</p>
                     <p>6.90€</p>
-                    <div>
-                        <div></div>
+                    <div class="dispo">
+                        <div class="circle"></div>
                         <p>disponible</p>
                     </div>
+                    <a href="#">
+                    <div class="btn-ajouter">
+                        <p>Ajouter au panier</p>
+                    </div>
+                    </a>
+                </div>
+                </div>
+            </section>
+            <h2>Jeunesse</h2>
+            <section class="hScroll">
+                <div class="xScroll">
+                <div class="vignette">
+                    <img src="../images/op1.jpg">
+                    <h3>One Piece T.01</h3>
+                    <P class="petite-police">Eiichiro Oda</P>
+                    <p class="petite-police">Glénat</p>
+                    <p>6.90€</p>
+                    <div class="dispo">
+                        <div class="circle"></div>
+                        <p>disponible</p>
+                    </div>
+                    <a href="#">
+                    <div class="btn-ajouter">
+                        <p>Ajouter au panier</p>
+                    </div>
+                </a>
+                </div>
+                <div class="vignette">
+                    <img src="../images/op1.jpg">
+                    <h3>One Piece T.01</h3>
+                    <P class="petite-police">Eiichiro Oda</P>
+                    <p class="petite-police">Glénat</p>
+                    <p>6.90€</p>
+                    <div class="dispo">
+                        <div class="circle"></div>
+                        <p>disponible</p>
+                    </div>
+                    <a href="#">
+                    <div class="btn-ajouter">
+                        <p>Ajouter au panier</p>
+                    </div>
+                    </a>
+                </div>
+                <div class="vignette">
+                    <img src="../images/op1.jpg">
+                    <h3>One Piece T.01</h3>
+                    <P class="petite-police">Eiichiro Oda</P>
+                    <p class="petite-police">Glénat</p>
+                    <p>6.90€</p>
+                    <div class="dispo">
+                        <div class="circle"></div>
+                        <p>disponible</p>
+                    </div>
+                    <a href="#">
+                    <div class="btn-ajouter">
+                        <p>Ajouter au panier</p>
+                    </div>
+                    </a>
+                </div>
+                </div>
+            </section>
+            <h2>Policier et Thriller</h2>
+            <section class="hScroll">
+                <div class="xScroll">
+                <div class="vignette">
+                    <img src="../images/op1.jpg">
+                    <h3>One Piece T.01</h3>
+                    <P class="petite-police">Eiichiro Oda</P>
+                    <p class="petite-police">Glénat</p>
+                    <p>6.90€</p>
+                    <div class="dispo">
+                        <div class="circle"></div>
+                        <p>disponible</p>
+                    </div>
+                    <a href="#">
+                    <div class="btn-ajouter">
+                        <p>Ajouter au panier</p>
+                    </div>
+                </a>
+                </div>
+                <div class="vignette">
+                    <img src="../images/op1.jpg">
+                    <h3>One Piece T.01</h3>
+                    <P class="petite-police">Eiichiro Oda</P>
+                    <p class="petite-police">Glénat</p>
+                    <p>6.90€</p>
+                    <div class="dispo">
+                        <div class="circle"></div>
+                        <p>disponible</p>
+                    </div>
+                    <a href="#">
+                    <div class="btn-ajouter">
+                        <p>Ajouter au panier</p>
+                    </div>
+                    </a>
+                </div>
+                <div class="vignette">
+                    <img src="../images/op1.jpg">
+                    <h3>One Piece T.01</h3>
+                    <P class="petite-police">Eiichiro Oda</P>
+                    <p class="petite-police">Glénat</p>
+                    <p>6.90€</p>
+                    <div class="dispo">
+                        <div class="circle"></div>
+                        <p>disponible</p>
+                    </div>
+                    <a href="#">
+                    <div class="btn-ajouter">
+                        <p>Ajouter au panier</p>
+                    </div>
+                    </a>
+                </div>
+                </div>
+            </section>
+            <h2>Biographie</h2>
+            <section class="hScroll">
+                <div class="xScroll">
+                <div class="vignette">
+                    <img src="../images/op1.jpg">
+                    <h3>One Piece T.01</h3>
+                    <P class="petite-police">Eiichiro Oda</P>
+                    <p class="petite-police">Glénat</p>
+                    <p>6.90€</p>
+                    <div class="dispo">
+                        <div class="circle"></div>
+                        <p>disponible</p>
+                    </div>
+                    <a href="#">
+                    <div class="btn-ajouter">
+                        <p>Ajouter au panier</p>
+                    </div>
+                </a>
+                </div>
+                <div class="vignette">
+                    <img src="../images/op1.jpg">
+                    <h3>One Piece T.01</h3>
+                    <P class="petite-police">Eiichiro Oda</P>
+                    <p class="petite-police">Glénat</p>
+                    <p>6.90€</p>
+                    <div class="dispo">
+                        <div class="circle"></div>
+                        <p>disponible</p>
+                    </div>
+                    <a href="#">
+                    <div class="btn-ajouter">
+                        <p>Ajouter au panier</p>
+                    </div>
+                    </a>
+                </div>
+                <div class="vignette">
+                    <img src="../images/op1.jpg">
+                    <h3>One Piece T.01</h3>
+                    <P class="petite-police">Eiichiro Oda</P>
+                    <p class="petite-police">Glénat</p>
+                    <p>6.90€</p>
+                    <div class="dispo">
+                        <div class="circle"></div>
+                        <p>disponible</p>
+                    </div>
+                    <a href="#">
+                    <div class="btn-ajouter">
+                        <p>Ajouter au panier</p>
+                    </div>
+                    </a>
+                </div>
+                </div>
+            </section>
+            <h2>Littérature et Fiction</h2>
+            <section class="hScroll">
+                <div class="xScroll">
+                <div class="vignette">
+                    <img src="../images/op1.jpg">
+                    <h3>One Piece T.01</h3>
+                    <P class="petite-police">Eiichiro Oda</P>
+                    <p class="petite-police">Glénat</p>
+                    <p>6.90€</p>
+                    <div class="dispo">
+                        <div class="circle"></div>
+                        <p>disponible</p>
+                    </div>
+                    <a href="#">
+                    <div class="btn-ajouter">
+                        <p>Ajouter au panier</p>
+                    </div>
+                </a>
+                </div>
+                <div class="vignette">
+                    <img src="../images/op1.jpg">
+                    <h3>One Piece T.01</h3>
+                    <P class="petite-police">Eiichiro Oda</P>
+                    <p class="petite-police">Glénat</p>
+                    <p>6.90€</p>
+                    <div class="dispo">
+                        <div class="circle"></div>
+                        <p>disponible</p>
+                    </div>
+                    <a href="#">
+                    <div class="btn-ajouter">
+                        <p>Ajouter au panier</p>
+                    </div>
+                    </a>
+                </div>
+                <div class="vignette">
+                    <img src="../images/op1.jpg">
+                    <h3>One Piece T.01</h3>
+                    <P class="petite-police">Eiichiro Oda</P>
+                    <p class="petite-police">Glénat</p>
+                    <p>6.90€</p>
+                    <div class="dispo">
+                        <div class="circle"></div>
+                        <p>disponible</p>
+                    </div>
+                    <a href="#">
+                    <div class="btn-ajouter">
+                        <p>Ajouter au panier</p>
+                    </div>
+                    </a>
+                </div>
+                </div>
+            </section>
+            <h2>SF et Fantasy</h2>
+            <section class="hScroll">
+                <div class="xScroll">
+                <div class="vignette">
+                    <img src="../images/op1.jpg">
+                    <h3>One Piece T.01</h3>
+                    <P class="petite-police">Eiichiro Oda</P>
+                    <p class="petite-police">Glénat</p>
+                    <p>6.90€</p>
+                    <div class="dispo">
+                        <div class="circle"></div>
+                        <p>disponible</p>
+                    </div>
+                    <a href="#">
+                    <div class="btn-ajouter">
+                        <p>Ajouter au panier</p>
+                    </div>
+                </a>
+                </div>
+                <div class="vignette">
+                    <img src="../images/op1.jpg">
+                    <h3>One Piece T.01</h3>
+                    <P class="petite-police">Eiichiro Oda</P>
+                    <p class="petite-police">Glénat</p>
+                    <p>6.90€</p>
+                    <div class="dispo">
+                        <div class="circle"></div>
+                        <p>disponible</p>
+                    </div>
+                    <a href="#">
+                    <div class="btn-ajouter">
+                        <p>Ajouter au panier</p>
+                    </div>
+                    </a>
+                </div>
+                <div class="vignette">
+                    <img src="../images/op1.jpg">
+                    <h3>One Piece T.01</h3>
+                    <P class="petite-police">Eiichiro Oda</P>
+                    <p class="petite-police">Glénat</p>
+                    <p>6.90€</p>
+                    <div class="dispo">
+                        <div class="circle"></div>
+                        <p>disponible</p>
+                    </div>
+                    <a href="#">
+                    <div class="btn-ajouter">
+                        <p>Ajouter au panier</p>
+                    </div>
+                    </a>
                 </div>
                 </div>
             </section>
 
         </div>
     </main>
+    <footer>
+        <nav id="menu">
+            <ul>
+                <li><a href="#">La Boutique</a></li>
+                <li><a href="#">Contactez nous</a></li>
+                <li><a href="#">À Propos</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="#">F.A.Q</a></li>
+            </ul>
+        </nav>
+        <P><a href="#">retour en haut</a></P>
+        <div class="icone">
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter"></i>
+        </div>
+    </footer>
     <script src="../js/menu.js"></script>
 </body>
 </html>
