--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
         </div>     
         <i class="fas fa-bars burger"></i>
-        <img src="images/logo.svg" alt="logo.svg">
+        <a href="#"><img src="images/logo.svg" alt="logo.svg"></a>
         <h1>La Notule</h1>
         <form>
             <input type="text" id="search" value="Rechercher..." onfocus="this.value=''">
