--- a/pages/boutique.html
+++ b/pages/boutique.html
@@ -19,7 +19,7 @@
             </ul>
         </div>     
         <i class="fas fa-bars burger"></i>
-        <img src="../images/logo.svg" alt="logo.svg">
+        <a href="../index.html"><img src="../images/logo.svg" alt="logo.svg"></a>
         <h1>La Notule</h1>
         <form>
             <input type="text" id="search" value="Rechercher..." onfocus="this.value=''">
