--- a/pages/boutique.html
+++ b/pages/boutique.html
@@ -52,10 +52,21 @@
     <img src="../images/boutique.jpg" alt="boutique.jpg" class="banniere">
     <p class="boutique">La Boutique</p>
     <main>
-        <div class="center">
-            <h2>Catégories</h2>
-            <nav>
+            <nav class="desknav">
+                <h2>Catégories</h2>
                 <ul class="catégories">
+                    <li><a href="">BD et Manga</a></li>
+                    <li><a href="">Jeunesse</a></li>
+                    <li><a href="">Policier et Thriller</a></li>
+                    <li><a href="">Biographie</a></li>
+                    <li><a href="">Littérature et Fiction</a></li>
+                    <li><a href="">SF et Fantasy</a></li>
+                </ul>
+            </nav>
+        <div class="center">
+            <h2 class="titre menu">Catégories</h2>
+            <nav>
+                <ul class="catégories mobile">
                     <li><a href="">BD et Manga</a></li>
                     <li><a href="">Jeunesse</a></li>
                     <li><a href="">Policier et Thriller</a></li>
